Added script descriptions

--- a/FilterDPO.ipynb
+++ b/FilterDPO.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Pulls full judgement factor dataset and applies filter for MinChosen/MinDelta scores"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "id": "kX7tsgH-6L9r"
