--- a/TRL/MakeDPO5.ipynb
+++ b/TRL/MakeDPO5.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creates full judgement factor datasets from WildChat 50m Judgements\n",
+    "#Filters through all 5 models for each judgement factor and selects pairs with the highest delta"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "id": "BGn9jYFfZZ9_"
